--- a/src/template.html
+++ b/src/template.html
@@ -13,9 +13,8 @@
             </div>
             <div id = "buttons">
                 <button id = "Home">Home</button>
-                <button id = "Dishes">Dishes</button>
                 <button id = "Menu">Menu</button>
-                <button id = "Specials">Specials</button>
+                <button id = "contactUs">Contact Us</button>
             </div>
         </nav>
     </header>
