feat: add choose your dish type section in menu page

--- a/src/template.html
+++ b/src/template.html
@@ -21,5 +21,10 @@
     <div id = "content">
 
     </div>
+    <footer>
+        test1
+        test2
+        test3
+    </footer>
 </body>
 </html>
