feat: add animations to menu and contact us pages as well and implement footer for the website

--- a/src/template.html
+++ b/src/template.html
@@ -22,9 +22,8 @@
 
     </div>
     <footer>
-        test1
-        test2
-        test3
+        © 2025 Restaurant. All rights reserved.
+        <a href="https://github.com/AhmedLouay-coder21/restaurant-page">Github Repo</a>
     </footer>
 </body>
 </html>
